Bump clojask-script to clojask 2.0.3; add install and start make targets
clojask 2.0.1 pulls upstream Onyx 0.14.6, which cannot start on JDK 17+.
2.0.3 depends on the clojure-finance Onyx fork and needs Clojure 1.11 plus
--add-opens for jdk.internal.misc. The script's API surface is unchanged
between the two versions.

The Makefile targets come from the deleted leo branch.