@@ -3,8 +3,10 @@
   :url "http://example.com/FIXME"
   :license {:name "EPL-2.0 OR GPL-2.0-or-later WITH Classpath-exception-2.0"
             :url "https://www.eclipse.org/legal/epl-2.0/"}
-  :dependencies [[org.clojure/clojure "1.10.1"]
-                 [com.github.clojure-finance/clojask "2.0.1"]]
+  :dependencies [[org.clojure/clojure "1.11.1"]
+                 [com.github.clojure-finance/clojask "2.0.3"]]
+  ;; Onyx (clojure-finance fork) needs JDK 17+ and this flag for Aeron/Agrona.
+  :jvm-opts ["--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"]
   :repl-options {:init-ns clojask-script.core
                  :timeout 18000}
   :main clojask-script.core/-main)
